--- a/custom_addons/grants_training_suite_v19/views/menu_views.xml
+++ b/custom_addons/grants_training_suite_v19/views/menu_views.xml
@@ -78,6 +78,11 @@
                 name="Document Requests"
                 action="action_gr_document_request"
                 sequence="10"/>
+            <menuitem
+                id="menu_grants_training_student_document_requests"
+                name="Student Document Requests"
+                action="action_document_request_portal"
+                sequence="20"/>
         </menuitem>
         
         <!-- Training Management -->
