Fix Odoo 19 compatibility: replace 'tree' with 'list' view type

--- a/custom_addons/student_enrollment_portal/views/student_registration_views.xml
+++ b/custom_addons/student_enrollment_portal/views/student_registration_views.xml
@@ -111,12 +111,12 @@
         </field>
     </record>
     
-    <!-- Tree View -->
+    <!-- List View -->
     <record id="view_student_registration_tree" model="ir.ui.view">
-        <field name="name">student.registration.tree</field>
+        <field name="name">student.registration.list</field>
         <field name="model">student.registration</field>
         <field name="arch" type="xml">
-            <tree string="Student Registrations" 
+            <list string="Student Registrations" 
                   decoration-info="state == 'draft'" 
                   decoration-warning="state == 'submitted'" 
                   decoration-primary="state in ['eligibility_review', 'document_review']" 
@@ -134,7 +134,7 @@
                        decoration-danger="state == 'rejected'"/>
                 <field name="create_date"/>
                 <field name="reviewer_id"/>
-            </tree>
+            </list>
         </field>
     </record>
     
@@ -223,7 +223,7 @@
     <record id="action_student_registration" model="ir.actions.act_window">
         <field name="name">Student Registrations</field>
         <field name="res_model">student.registration</field>
-        <field name="view_mode">kanban,tree,form</field>
+        <field name="view_mode">kanban,list,form</field>
         <field name="context">{'search_default_filter_submitted': 1}</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
@@ -250,7 +250,7 @@
     <record id="action_student_registration_eligibility" model="ir.actions.act_window">
         <field name="name">Eligibility Review</field>
         <field name="res_model">student.registration</field>
-        <field name="view_mode">kanban,tree,form</field>
+        <field name="view_mode">kanban,list,form</field>
         <field name="context">{'search_default_filter_eligibility': 1}</field>
         <field name="domain">[('state', '=', 'eligibility_review')]</field>
     </record>
@@ -265,7 +265,7 @@
     <record id="action_student_registration_document" model="ir.actions.act_window">
         <field name="name">Document Review</field>
         <field name="res_model">student.registration</field>
-        <field name="view_mode">kanban,tree,form</field>
+        <field name="view_mode">kanban,list,form</field>
         <field name="context">{'search_default_filter_document': 1}</field>
         <field name="domain">[('state', '=', 'document_review')]</field>
     </record>
@@ -280,7 +280,7 @@
     <record id="action_student_registration_approved" model="ir.actions.act_window">
         <field name="name">Approved Registrations</field>
         <field name="res_model">student.registration</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
         <field name="context">{'search_default_filter_approved': 1}</field>
         <field name="domain">[('state', '=', 'approved')]</field>
     </record>
@@ -295,7 +295,7 @@
     <record id="action_student_registration_rejected" model="ir.actions.act_window">
         <field name="name">Rejected Registrations</field>
         <field name="res_model">student.registration</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
         <field name="context">{'search_default_filter_rejected': 1}</field>
         <field name="domain">[('state', '=', 'rejected')]</field>
     </record>
@@ -310,7 +310,7 @@
     <record id="action_student_registration_all" model="ir.actions.act_window">
         <field name="name">All Registrations</field>
         <field name="res_model">student.registration</field>
-        <field name="view_mode">tree,kanban,form</field>
+        <field name="view_mode">list,kanban,form</field>
     </record>
     
     <menuitem id="menu_student_registration_all" 
