--- a/custom_addons/student_enrollment_portal/views/student_registration_views.xml
+++ b/custom_addons/student_enrollment_portal/views/student_registration_views.xml
@@ -187,7 +187,7 @@
         </field>
     </record>
     
-    <!-- Search View -->
+    <!-- Search View - Temporarily commented out for debugging
     <record id="view_student_registration_search" model="ir.ui.view">
         <field name="name">student.registration.search</field>
         <field name="model">student.registration</field>
@@ -215,6 +215,7 @@
             </search>
         </field>
     </record>
+    -->
     
     <!-- Action -->
     <record id="action_student_registration" model="ir.actions.act_window">
