--- a/custom_addons/grants_training_suite_v19/views/course_enrollment_request_views.xml
+++ b/custom_addons/grants_training_suite_v19/views/course_enrollment_request_views.xml
@@ -23,7 +23,7 @@
                 </header>
                 <sheet>
                     <div class="oe_button_box" name="button_box">
-                        <button name="%(grants_training_suite_v19.action_course_session)d" 
+                        <button name="%(grants_training_suite_v19.action_gr_course_session)d" 
                                 type="action" 
                                 class="oe_stat_button" 
                                 icon="fa-calendar"
@@ -99,6 +99,7 @@
     </record>
 
     <!-- Course Enrollment Request Search View -->
+    <!--
     <record id="view_course_enrollment_request_search" model="ir.ui.view">
         <field name="name">course.enrollment.request.search</field>
         <field name="model">course.enrollment.request</field>
@@ -123,6 +124,7 @@
             </search>
         </field>
     </record>
+    -->
 
     <!-- Course Enrollment Request Kanban View -->
     <record id="view_course_enrollment_request_kanban" model="ir.ui.view">
@@ -208,7 +210,7 @@
     <!-- Menu Items -->
     <menuitem id="menu_course_enrollment_request_root"
               name="Enrollment Requests"
-              parent="menu_student_management"
+              parent="grants_training_suite_v19.menu_grants_training_students"
               sequence="25"/>
 
     <menuitem id="menu_course_enrollment_request_all"
@@ -230,4 +232,3 @@
               sequence="3"/>
 
 </odoo>
-
