--- a/custom_addons/grants_training_suite_v19/views/course_enrollment_request_views.xml
+++ b/custom_addons/grants_training_suite_v19/views/course_enrollment_request_views.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     
+    <!-- Ensure parent menu exists (in case menu_views.xml not loaded yet) -->
+    <menuitem id="menu_grants_training_students"
+              name="Student Management"
+              parent="menu_grants_training_main"
+              sequence="10"/>
+    
     <!-- Course Enrollment Request Form View -->
     <record id="view_course_enrollment_request_form" model="ir.ui.view">
         <field name="name">course.enrollment.request.form</field>
