Add main menu fallback definition to course_enrollment_request_views.xml

--- a/custom_addons/grants_training_suite_v19/views/course_enrollment_request_views.xml
+++ b/custom_addons/grants_training_suite_v19/views/course_enrollment_request_views.xml
@@ -2,6 +2,13 @@
 <odoo>
     
     <!-- Ensure parent menu exists (in case menu_views.xml not loaded yet) -->
+    <!-- Main menu root -->
+    <menuitem id="menu_grants_training_main"
+              name="Grants Training"
+              sequence="10"
+              web_icon="grants_training_suite_v19,static/description/icon.png"/>
+    
+    <!-- Student Management submenu -->
     <menuitem id="menu_grants_training_students"
               name="Student Management"
               parent="menu_grants_training_main"
