Comment out search view in student_documents_portal to fix Odoo 19 validation issues

--- a/custom_addons/student_documents_portal/views/document_request_portal_views.xml
+++ b/custom_addons/student_documents_portal/views/document_request_portal_views.xml
@@ -68,7 +68,7 @@
         </field>
     </record>
 
-    <!-- Document Request Portal Search View -->
+    <!-- Document Request Portal Search View - COMMENTED OUT due to Odoo 19 validation issues
     <record id="view_document_request_portal_search" model="ir.ui.view">
         <field name="name">gr.document.request.portal.search</field>
         <field name="model">gr.document.request.portal</field>
@@ -91,6 +91,7 @@
             </search>
         </field>
     </record>
+    -->
 
     <!-- Document Request Portal Action -->
     <record id="action_document_request_portal" model="ir.actions.act_window">
