Temporarily comment out document management menu until student_documents_portal is installed

--- a/custom_addons/grants_training_suite_v19/views/menu_views.xml
+++ b/custom_addons/grants_training_suite_v19/views/menu_views.xml
@@ -68,7 +68,7 @@
                 groups="sales_team.group_sale_salesman"/>
         </menuitem>
         
-        <!-- Document Management -->
+        <!-- Document Management - TEMPORARILY COMMENTED OUT until student_documents_portal is installed
         <menuitem
             id="menu_grants_training_documents"
             name="Document Management"
@@ -76,16 +76,10 @@
             <menuitem
                 id="menu_grants_training_document_requests"
                 name="Document Requests"
-                action="action_gr_document_request"
+                action="student_documents_portal.action_gr_document_request"
                 sequence="10"/>
-            <!-- COMMENTED OUT - Phase 4: Student Document Requests menu - can be enabled after testing
-            <menuitem
-                id="menu_grants_training_student_document_requests"
-                name="Student Document Requests"
-                action="grants_training_suite_v19.action_document_request_portal"
-                sequence="20"/>
-            -->
         </menuitem>
+        -->
         
         <!-- Training Management -->
         <menuitem
