Deprecate old attachment fields and hide them in views
- Mark attachment_ids and attachment_count as deprecated in extension
- Hide old attachment_ids field in registration form view
- Ensure only registration_document_ids is visible
- Prevents confusion between old and new document management

--- a/custom_addons/student_documents_portal/views/student_registration_extension_views.xml
+++ b/custom_addons/student_documents_portal/views/student_registration_extension_views.xml
@@ -29,9 +29,12 @@
                 </group>
             </xpath>
             
+            <!-- Hide old attachment_ids field if it exists -->
+            <xpath expr="//field[@name='attachment_ids']" position="replace"/>
+            
             <!-- Replace the Documents page with registration document list -->
             <xpath expr="//page[@string='Documents']" position="replace">
-                <page string="Documents">
+                <page string="Documents" name="documents_page">
                     <field name="registration_document_ids" nolabel="1">
                         <list string="Registration Documents" editable="bottom">
                             <field name="document_type"/>
