Fix portal controller conflicts: Rename classes and merge portal home values
- Rename StudentPortal to GrantsStudentPortal in grants_training_suite_v19
- Rename StudentPortal to StudentEnrollmentPortal in student_enrollment_portal
- Merge _prepare_home_portal_values to include both course_count and registration_count
- Remove duplicate _prepare_home_portal_values from student_enrollment_portal
- Prevents Odoo from loading only one StudentPortal class
- Fixes method override conflicts between modules
- Adds full module prefix to batch intake menu actions

--- a/custom_addons/batch_intake_processor/views/menu_views.xml
+++ b/custom_addons/batch_intake_processor/views/menu_views.xml
@@ -9,19 +9,19 @@
     <menuitem id="menu_batch_intake_batches"
               name="Batches"
               parent="menu_batch_intake_root"
-              action="action_batch_intake"
+              action="batch_intake_processor.action_batch_intake"
               sequence="10"/>
     
     <menuitem id="menu_batch_intake_applicants"
               name="All Applicants"
               parent="menu_batch_intake_root"
-              action="action_batch_intake_applicant"
+              action="batch_intake_processor.action_batch_intake_applicant"
               sequence="20"/>
     
     <menuitem id="menu_batch_intake_upload"
               name="Upload Batch"
               parent="menu_batch_intake_root"
-              action="action_batch_upload_wizard"
+              action="batch_intake_processor.action_batch_upload_wizard"
               sequence="5"/>
     
     <!-- Configuration Menu -->
@@ -33,6 +33,6 @@
     <menuitem id="menu_batch_intake_criteria"
               name="Eligibility Criteria"
               parent="menu_batch_intake_config"
-              action="action_eligibility_criteria"
+              action="batch_intake_processor.action_eligibility_criteria"
               sequence="10"/>
 </odoo>
